# masa-bittensor

./: .dockerignore  .env.example  .env.sample  .flake8  .gitignore  Big E.json  CONTRIBUTING.md  Circus.json  Cyber Monday.json  DOCKER.md  Daniel Penny.json  Dockerfile  Dockerfile.control  Dockerfile.miner  Dockerfile.subnet  Dockerfile.validator  Elon Musk.json  Makefile  New Day.json  PlayStation.json  Property.json  README.md  bittensor_nodes.db  bittensor_scraper.sh  config.json  docker-compose.yaml  docker-compose.yml  entrypoint.py  environment.yml  get_hotkey.py  healthcheck-dockerfile  pyproject.toml  requirements.txt  run.sh  scrape_twitter_keywords.txt  set_weights.py  setup.py  start.sh  update_bittensor_validator.sh  update_bittensor_validator.sh.original
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Spike  Spike.yml  bug-issue.yml  bug-report.yml  bug_report.md  bug_report.yml  bug_report2.yml  config.yml  development-task.yml  feature_request.md  feature_request.yml  issue.yml  regular-issue.yml  spike-investigation.yml  spike-research.yml
.github/workflows/: commitlint.yml  coverage.yml  create-release-notes-pr.yml  docker-compose.yml  docker-hub-description.yml  docker-multiplatform.yml  docker-publish.yml  images.yml  prlint.yml  publish-release-notes.yml  publish-to-docs.yml
alchemy/validator/: forward.py  reward.py
config/: twitter.json
contrib/: CONTRIBUTING.md
docker/: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  functions.sh  orchestrator.py  setup.sh  subnet-config.json
docker/miner/: Dockerfile  entrypoint.sh
docker/protocol/: Dockerfile  entrypoint.sh
docker/subnet/: Dockerfile  entrypoint.sh
docker/subtensor/: Dockerfile  entrypoint.sh
docker/validator/: Dockerfile  entrypoint.sh
docs/: RELEASE_NOTES.md  bittensor-1.md  running_on_devnet.md  running_on_masa_devnet.md  running_on_staging.md
docs/advanced/: blacklisting.md
docs/guides-and-tutorials/: running_on_devnet.md  running_on_staging.md
docs/internal/: hyperparameters.md
docs/miner/: 2-clone-repository.md  8-run-miner.md
docs/setup/: 8-run-protocol.md
docs/welcome-to-masa-bittensor-subnet/: welcome-to-masa-bittensor-subnet.md
healthcheck/: main.py
masa/: __init__.py  mock.py  protocol.py  types.py
masa/api/: dummy.py  get_query_axons.py  masa_protocol_request.py  request.py  server.py  validator_api.py
masa/base/: healthcheck.py  miner.py  neuron.py  validator.py
masa/miner/: masa_protocol_request.py  oracle_request.py  protocol.py  twitter_profile_request.py  twitter_recent_tweets_request.py
masa/synapses/: __init__.py
masa/types/: discord.py  twitter.py  web.py
masa/utils/: config.py  logging.py  misc.py  (+2 more)
neurons/: miner.py  miner_neuron.py  validator.py
notebooks/: Rewards Simulation.ipynb
ops/: Dockerfile  analyze_state.py  backup_state.py  create_tables.sql  docker-compose.yml  monitor_weights.py  process_weights.py  requirements.txt  schema.sql  store_state.py  test_backup.py
scripts/: create_miner.sh  create_subnet.sh  create_validator.sh  create_wallet.sh  register_miner.sh  run_faucet.sh  run_miner.py  run_validator.py
startup/: __init__.py  __main__.py  config.py  entrypoint.py  process_manager.py  registration_manager.py  report.py  wallet_manager.py
testnet-rewards/: README.md  generate-proof.py  verify-proof.py
tests/: helpers.py  run-tests.sh  test_miner.py  test_mock.py  test_mocks.py  test_subnet.py  test_template_miner.py  test_template_validator.py  test_utils.py  test_validator.py  validator.py
tweets/: #GivingTuesday.json  #HappyBirthdayJin.json  Broncos.json  Circus.json  Cyber Monday.json  Delaware.json  Elon Musk.json  Fitting.json  Jill.json  Ley Marcial.json  Martial Law.json  NOT GUILTY.json  National Assembly.json  New Day.json  Parliament.json  Seoul.json  Yoon.json
(+67 files in other folders)
