[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["masa"]

[project]
name = "masa"
version = "1.5.0"
description = "bittensor subnet for masa protocol"
authors = [
    { name = "masa.ai", email = "hello@masa.ai" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bittensor>=9.0.0",
    "masa-ai>=0.2.7",
    "aiohttp>=3.10.11",
    "fastapi>=0.110.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.2.3",
    "uvicorn>=0.30.5",
    "tqdm>=4.67.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "torch>=2.3.0",
    "scipy>=1.15.0"
]